some amelioration on frontend

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -3,6 +3,10 @@
     justify-content: space-between;
     padding: 25px;
     padding-top: 50px;
+    padding-bottom: 0px;
+    position: fixed;
+    background-color: transparent;
+    width: 98%;
 }
 
 .logo, .profile, .navigation{
@@ -20,19 +24,11 @@
 }
 
 .logo img{
-    height: 50px;
+    height: 40px;
 }
 
 .profile{
     margin-right: 40px;
-}
-
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
 }
 
 .navigation{
@@ -41,12 +37,25 @@
     padding-right: 1rem;
 }
 
-.deck, .market, .pack{
-    width: 5rem;
-    padding: 1rem;
+.navigation button{
+    font-family: inherit;
+    font-weight: bold;
+    border: none;
+    color: white;
+    width: 8rem;
+    padding: 1.5rem;
     margin-right: 0.5rem;
     margin-left: 0.5rem;
     border-radius: inherit;
-    background-color: red;
+    background-color: #191919;
     text-align: center;
+    cursor: pointer;
 }
+
+.navigation button:hover{
+    background: black;
+}
+
+.navigation button:focus{
+    background: linear-gradient(140deg,lch(89.548% 132 162.268),lch(90.666% 132 196.455))!important;
+}   
