--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,7 @@
   }
   
 html, body {
-  background-color: blue;
+  background-color:hsl(220, 7%, 24%);
 margin: 0 !important;
 padding: 0 !important;
 overflow: hidden;
