--- a/frontend/src/pages/Accueil/Accueil.css
+++ b/frontend/src/pages/Accueil/Accueil.css
@@ -50,5 +50,6 @@ p{
     font-weight : 600;
     line-height : normal;
     position : relative;
+    margin-top : 1.5rem;
     text-align: center; 
 }
