--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -12,6 +12,7 @@
     background-color: #161b22;
     color: white;
     align-items: center;
+    display : flex;
 }
 
 .logo{
@@ -25,6 +26,7 @@
 .name{
     margin-left : 10px;
     font-weight : bold;
+    
 }
 
 .profile{
