--- a/frontend/src/pages/Achat/Achat.css
+++ b/frontend/src/pages/Achat/Achat.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction:row;
     justify-content:center;
+    padding: 5rem
 }
 
 .selector{
@@ -11,4 +12,16 @@
 
 .selector-button button{
     margin: 1rem;
+    width: 10rem;
+    border-radius: 0.2rem;
+    border: none;
+    font-style: bold;
+    cursor: pointer;
+}
+
+.cards{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
 }
