--- a/frontend/src/components/Cards/Cards.css
+++ b/frontend/src/components/Cards/Cards.css
@@ -1,20 +1,37 @@
 .carte {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  margin-bottom: 10px; /* Espacement entre les cartes */
 }
 
+.cartes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  
+}
 
+button {
+  margin-top: 2px; /* Espacement entre la carte et le bouton */
+}
 
 .cartes img{
     filter: brightness(0.2); 
+    display: inline-block;
+   vertical-align: middle;
+
+
     margin: 0 1rem 1.5rem;
     
 }
 
 .cartes img:hover{
     transform : scale(1.15);
+    display: inline-block;
+    vertical-align: middle;
+
 }
 
 
