--- a/frontend/src/pages/MyCards/MyCards.css
+++ b/frontend/src/pages/MyCards/MyCards.css
@@ -14,6 +14,32 @@ h2{
     line-height : normal;
     position : relative;
     text-align: center; 
+    vertical-align: middle;
     text-decoration: underline; 
-
 }
+
+.carte button {
+    font-family: inherit;
+    font-size: 16px;
+    height: 4rem;
+    border: none;
+    color: white;
+    width: 8rem;
+    padding: inherit;
+    border-radius: inherit;
+    background-color: #161b22;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+    transition: background 0.3s;
+}
+
+.carte button:hover {
+    background: green   ;
+}
+
+.carte button:focus {
+    background: linear-gradient(140deg, lch(89.548% 132 162.268), lch(90.666% 132 196.455))!important;
+}
+
+
